crates/ir/tests/ir/snapshots/main__ir__lower__ownership__shared_compose.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module ownership__shared_compose

import core/peek/peek as peek(e) -> e
import core/list/last as last(List[r3]) -> Option[r3]
import core/list/sort_by as sort_by(List[w5], (w5) -> l5) -> List[w5]
import core/list/filter as filter(List[g1], (g1) -> Bool) -> List[g1]
import core/list/fold as fold(List[t1], v1, (v1, t1) -> v1) -> v1
import core/list/map as map(List[v], (v) -> x) -> List[x]
import core/vec/to_list as to_list(Vec[z7]) -> List[z7]
import core/io/println as println(h) -> Unit
import core/option/Some as Some(c) -> Option[c]
import core/result/Ok as Ok(e) -> Result[d, e]
import core/result/Err as Err(d) -> Result[d, e]
import core/list/Cons as Cons(f, List[f]) -> List[f]
fn assert_eq_show(v0: Dict[core/eq.Eq, l8], v1: Dict[core/show.Show, l8], v2: l8, v3: l8) -> l8 =
  v2
