crates/ir/tests/ir/snapshots/main__ir__lower__ownership__struct_update_replaces_own.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module ownership__struct_update_replaces_own

struct Buf { name: String, data: ~String }
import core/peek/peek as peek(d) -> d
import core/list/last as last(List[n3]) -> Option[n3]
import core/list/sort_by as sort_by(List[s5], (s5) -> h5) -> List[s5]
import core/list/filter as filter(List[f1], (f1) -> Bool) -> List[f1]
import core/list/fold as fold(List[s1], t1, (t1, s1) -> t1) -> t1
import core/list/map as map(List[u], (u) -> w) -> List[w]
import core/vec/to_list as to_list(Vec[n10]) -> List[n10]
import core/io/println as println(g) -> Unit
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]

fn consume(v0: ~Buf) -> String =
  let v1: String = project v0.0
  let v2: ~String = project v0.1
  v1

fn test(v3: ~Buf, v4: ~String) -> String =
  let_join v9(v5: ~Buf) =
    let v8: String = call consume(v5)
    v8
  in
  let v6: String = project v3.0
  let v7: ~Buf = construct Buf(v6, v4)
  jump v9(v7)
